# chatview

./: .gitignore
.github/workflows/: client-windows.yml  windows-manual.yml
api/: go.mod
client/: .gitignore  CMakeLists.txt  CMakePresets.json  client.example.yaml  configuration.md  go.mod  go.sum  llvm-windows-clang-modules-crash.md  saucer-hash-routing-probe.zh-CN.md
client/cmake/: dependencies.cmake  options.cmake
client/cmd/chatview-fyne/: main.go
client/cmd/client/: main.go  native_wayland.go  native_wayland_stub.go
client/internal/config/: config.go  config_test.go
client/internal/core/: admin.go  auth.go  events.go  helpers.go  history.go  mapping.go  messages.go  outbox.go  ports.go  service.go  service_test.go  session.go  types.go  types_test.go
client/internal/domain/: types.go  types_test.go
client/internal/identity/: store.go  store_test.go
client/internal/platform/: wayland.go  wayland_stub.go
client/internal/rpcclient/: admin.go  auth.go  chat.go  client.go  client_test.go  errors.go  events.go  helpers.go  options.go  proto.go  session.go  transport.go  types.go
client/internal/storage/: helpers.go  history.go  migrations.go  outbox.go  rows.go  store.go  store_test.go
client/internal/ui/: admin.go  admin_view.go  app.go  async.go  auth_view.go  components.go  events.go  friends.go  helpers.go  helpers_test.go  list_bindings.go  notifications.go  outbox.go  shell_view.go  state.go  sync.go  theme.go
client/protobuf/chatview/: admin.proto  auth.proto  chat.proto  events.proto
client/protobuf/chatview/common/: types.proto
client/scripts/: gen-proto  run-fyne
client/src/: main.cpp
client/src/chatview/: CMakeLists.txt
client/src/chatview/client/: CMakeLists.txt  client-bridge.cppm  client-cache.cppm  client-detail.cppm  client-identity.cppm  client-native.cppm  client-outbox.cppm  client-rpc.cpp  client-rpc.cppm  client-rpc.hpp  client-session.cppm  client-types.cppm  client-types.hpp  client.cppm
client/src/chatview/proto/: CMakeLists.txt  admin.cppm  auth.cppm  chat.cppm  common.cppm  events.cppm
client/src/chatview/storage/: CMakeLists.txt  cache_database.cppm
client/tests/: client_local_tests.cpp
frontend/: .gitignore  index.html  package.json
frontend/src/: app-root.ts  bridge.ts  index.css  main.ts  router.ts  store.ts  types.ts
frontend/src/components/: identity-card.ts  toast-notification.ts
frontend/src/layouts/: main-layout.ts  sidebar-menu.ts
frontend/src/pages/: error-page.ts  not-found-page.ts  root-redirect.ts
frontend/src/pages/admin/: admin-dashboard.ts  admin-shell.ts  broadcast-panel.ts  user-manager.ts
frontend/src/pages/auth/: auth-create.ts  auth-import.ts  auth-unlock.ts  auth-view.ts
frontend/src/pages/chat/: chat-panel.ts  chat-workspace.ts  friend-list.ts  message-bubble.ts
proto/chatview/: admin.proto  auth.proto  chat.proto  events.proto
proto/chatview/common/: types.proto
scripts/: gen-proto
server/: .gitignore  config.example.yaml  configuration.md  go.mod  go.sum
server/cmd/server/: main.go
server/internal/auth/: crypto.go  crypto_test.go
server/internal/config/: config.go  config_test.go
server/internal/contextx/: auth.go
server/internal/db/: db.go  session.go
server/internal/eventhub/: hub.go  hub_test.go
server/internal/interceptor/: admin.go  auth.go  logging.go
server/internal/service/: admin.go  admin_test.go  auth.go  chat.go  chat_dedupe.go  chat_dedupe_test.go  chat_friends.go  chat_history.go  chat_history_test.go  chat_reads.go  chat_send.go  chat_send_test.go  events.go
server/migrations/: 001_init.down.sql  001_init.up.sql  002_message_idempotency_and_reads.down.sql  002_message_idempotency_and_reads.up.sql  003_message_id_uuidv7.down.sql  003_message_id_uuidv7.up.sql
server/proto/chatview/: admin.proto  auth.proto  events.proto
